# bounceboard

./: AGENTS.md  README.md  bb.py  cert.pem  client.py  common.py  key.pem  pyproject.toml  requirements.txt  server.py
bounceboard/: __init__.py  app.py  common.py  service.py  sync.py
bounceboard/clipboard/: __init__.py  backends.py  common.py  linux.py  macos.py  manager.py  win.py
bounceboard/static/: index.html
tests/: test_backends.py  test_manager.py
