[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bounceboard"
version = "0.1.0"
description = "A command-line utility to synchronize clipboards across machines."
readme = "README.md"
authors = [
  { name = "Jeremie Miller", email = "jeremie.miller@gmail.com" },
]
license = "MIT"
keywords = ["clipboard", "sync", "pasteboard", "utility"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Environment :: Console",
  "Topic :: Utilities",
]
dependencies = [
  "pyperclip>=1.8.0",
  "aiohttp>=3.8.0",
  "psutil>=5.8.0",
]

[project.scripts]
bb = "bounceboard.app:main"
